Update: Header.html Added to the Demo

--- a/Demo.html
+++ b/Demo.html
@@ -79,6 +79,10 @@
     <span id="redo">Redo</span>
   </p>
 </header>
+
+<iframe src="build/header.html" width="500" height="80"></iframe>
 <iframe src="build/document.html" onload="top.editor=this.contentWindow.editor" width="500" height="500"></iframe>
+
+
 </body>
 </html>
