--- a/Demo.html
+++ b/Demo.html
@@ -6,25 +6,29 @@
     <title>HTML Editor Test</title>
     <style type="text/css" media="screen">
     body {
-    position: relative;
-    margin: 0 auto;
-    padding: 50px;
-    width: 540px;
-    font: 400 14px/1.24 helvetica, arial, sans-serif;
-    text-shadow: 0 1px 0 white;
-  }
-  h1 {
-    font-size: 1.95em;
-  }
+      position:relative;
+      margin:0 auto;
+      padding:50px;
+      width:540px;
+      font:400 14px/1.24 helvetica,arial,sans-serif;
+      text-shadow:0 1px 0 #fff;
+    }
+
     iframe {
-      border: 1px solid #888;
+      border: none;
     }
+
+    h1 {
+        font-size:1.95em
+    }
+
     span {
-      cursor: pointer;
-      text-decoration: underline;
+        cursor:pointer;
+        text-decoration:underline
     }
+
     p {
-      margin: 5px 0;
+        margin:5px 0
     }
     </style>
     <!--[if IE 8]>
@@ -49,7 +53,7 @@
 <header>
   <p>This is a really simple demo, with the most trivial of UI integrations</p>
   <p>
-  <span id="bold">Bold</span>
+  <span id="bold2">Bold</span>
   <span id="removeBold">Unbold</span>
   <span id="italic">Italic</span>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -80,7 +84,7 @@
   </p>
 </header>
 
-<iframe src="build/header.html" width="500" height="80"></iframe>
+<iframe src="build/Squire-UI.html" width="500" height="80"></iframe>
 <iframe src="build/document.html" onload="top.editor=this.contentWindow.editor" width="500" height="500"></iframe>
 
 
