--- a/Demo.html
+++ b/Demo.html
@@ -8,9 +8,15 @@
     <script type="text/javascript" src="build/ie8.js"></script>
     <![endif]-->
     <script src="build/Squire-UI.js" type="text/javascript"></script>
+    <script>
+    window.addEventListener('load', function () {
+      var editor = new SquireUI({div: '#editor'});
+    });
+    </script>
 </head>
 <body>
 <h1>HTML Editor Test</h1>
 <textarea id="foo"></textarea>
+<div id="editor"></div>
 </body>
 </html>
