--- a/Demo.html
+++ b/Demo.html
@@ -10,7 +10,7 @@
     <script src="build/Squire-UI.js" type="text/javascript"></script>
     <script>
     window.addEventListener('load', function () {
-      var editor = new SquireUI({div: '#editor'});
+      var editor = new SquireUI({replace: 'textarea#foo'});
     });
     </script>
 </head>
