--- a/ui/Squire-UI.html
+++ b/ui/Squire-UI.html
@@ -1,16 +1,16 @@
 <div class="menu" contenteditable="false">
     <div class="group">
-        <div class="item"><i class="fa fa-bold"></i></div>
-        <div class="item"><i class="fa fa-italic"></i></div>
-        <div class="item"><i class="fa fa-underline"></i></div>
+        <div class="item"><i data-action="bold" data-value="" class="fa fa-bold"></i></div>
+        <div class="item"><i data-action="italic" data-value="" class="fa fa-italic"></i></div>
+        <div class="item"><i data-action="underline" data-value="" class="fa fa-underline"></i></div>
         <div id="font" class="item">
-            <i class="fa fa-font"></i>
+            <i data-action="bold" data-value="" class="fa fa-font"></i>
         </div>
     </div>
     <div class="group">
         <div class="item"><i class="fa fa-link"></i></div>
-        <div class="item"><i class="fa fa-quote-right"></i></div>
-        <div class="item"><i class="fa fa-list"></i></div>
+        <div data-action="quote" data-value="" class="item"><i class="fa fa-quote-right"></i></div>
+        <div data-action="list" data-value="" class="item"><i class="fa fa-list"></i></div>
         <div class="item">
             <i class="fa fa-picture-o"></i>
         </div>
