--- a/ui/Squire-UI.html
+++ b/ui/Squire-UI.html
@@ -4,7 +4,7 @@
         <div class="item"><i data-action="italic" data-value="" class="fa fa-italic"></i></div>
         <div class="item"><i data-action="underline" data-value="" class="fa fa-underline"></i></div>
         <div id="font" class="item">
-            <i data-action="bold" data-value="" class="fa fa-font"></i>
+            <i data-action="" data-value="" class="fa fa-font"></i>
         </div>
     </div>
     <div class="group">
@@ -16,8 +16,8 @@
         </div>
     </div>
     <div class="group">
-        <div class="item"><i class="fa fa-undo"></i></div>
-        <div class="item"><i class="fa fa-undo flip"></i></div>
+        <div class="item"><i data-action="undo" data-value="" class="fa fa-undo"></i></div>
+        <div class="item"><i data-action="redo" data-value="" class="fa fa-undo flip"></i></div>
     </div>
 </div>
 <div class="templates hidden">
