--- a/ui/Squire-UI.html
+++ b/ui/Squire-UI.html
@@ -1,23 +1,23 @@
 <div class="menu" contenteditable="false">
     <div class="group">
-        <div class="item"><i data-action="bold" data-value="" class="fa fa-bold"></i></div>
-        <div class="item"><i data-action="italic" data-value="" class="fa fa-italic"></i></div>
-        <div class="item"><i data-action="underline" data-value="" class="fa fa-underline"></i></div>
-        <div id="font" class="item">
-            <i data-action="" data-value="" class="fa fa-font"></i>
+        <div data-action="bold" data-value="" class="item"><i class="fa fa-bold"></i></div>
+        <div data-action="italic" data-value="" class="item"><i  class="fa fa-italic"></i></div>
+        <div data-action="underline" data-value="" class="item"><i class="fa fa-underline"></i></div>
+        <div data-action="" data-value=""  id="font" class="item">
+            <i class="fa fa-font"></i>
         </div>
     </div>
     <div class="group">
-        <div class="item"><i class="fa fa-link"></i></div>
+        <div data-action="link" data-value=""class="item"><i class="fa fa-link"></i></div>
         <div data-action="quote" data-value="" class="item"><i class="fa fa-quote-right"></i></div>
         <div data-action="list" data-value="" class="item"><i class="fa fa-list"></i></div>
-        <div class="item">
+        <div data-action="image" data-value="" class="item">
             <i class="fa fa-picture-o"></i>
         </div>
     </div>
     <div class="group">
-        <div class="item"><i data-action="undo" data-value="" class="fa fa-undo"></i></div>
-        <div class="item"><i data-action="redo" data-value="" class="fa fa-undo flip"></i></div>
+        <div data-action="undo" data-value="" class="item"><i class="fa fa-undo"></i></div>
+        <div data-action="redo" data-value="" class="item"><i class="fa fa-undo flip"></i></div>
     </div>
 </div>
 <div class="templates hidden">
