Working: Made progress on Rgex Checking

--- a/ui/Squire-UI.html
+++ b/ui/Squire-UI.html
@@ -1,16 +1,14 @@
 <div class="menu" contenteditable="false">
     <div class="group">
-      <div class="item fa fa-bold" data-action="bold" data-value="" style=
-      "font-style: italic"></div>
+      <div class="item fa fa-bold" data-action="bold" data-value=""></div>
 
-      <div class="item fa fa-italic" data-action="italic" data-value="" style=
-      "font-style: italic"></div>
+      <div class="item fa fa-italic" data-action="italic" data-value="" ></div>
 
       <div class="item fa fa-underline" data-action="underline" data-value=""
-      style="font-style: italic"></div>
+      ></div>
 
       <div class="item fa fa-font" data-action="" data-value="" id="font"
-      style="font-style: italic"></div>
+      ></div>
     </div>
 
     <div class="group">
@@ -18,13 +16,12 @@
       "font-style: italic"></div>
 
       <div class="item fa fa-quote-right" data-action="quote" data-value=""
-      style="font-style: italic"></div>
+      ></div>
 
-      <div class="item fa fa-list" data-action="list" data-value="" style=
-      "font-style: italic"></div>
+      <div class="item fa fa-list" data-action="list" data-value="" ></div>
 
       <div class="item fa fa-picture-o" data-action="image" data-value=""
-      style="font-style: italic"></div>
+      ></div>
     </div>
 
     <div class="group">
@@ -32,15 +29,13 @@
       "font-style: italic"></div>
 
       <div class="item fa fa-quote-right" data-action="quote" data-value=""
-      style="font-style: italic"></div>
+      ></div>
     </div>
 
     <div class="group">
-      <div class="item fa fa-undo" data-action="undo" data-value="" style=
-      "font-style: italic"></div>
+      <div class="item fa fa-undo" data-action="undo" data-value=""></div>
 
-      <div class="item fa fa-undo flip" data-action="redo" data-value="" style=
-      "font-style: italic"></div>
+      <div class="item fa fa-undo flip" data-action="redo" data-value="" ></div>
     </div>
   </div>
 
