Update: Bold, Underline,Italics, Lists, Quotes Undo & Redo working

--- a/ui/Squire-UI.html
+++ b/ui/Squire-UI.html
@@ -8,17 +8,14 @@
         </div>
     </div>
     <div class="group">
-        <div data-action="link" data-value=""class="item"><i class="fa fa-link"></i></div>
-        <div data-action="quote" data-value="" class="item"><i class="fa fa-quote-right"></i></div>
-        <div data-action="list" data-value="" class="item"><i class="fa fa-list"></i></div>
+        <div data-action="makeLink" data-value=""class="item"><i class="fa fa-link"></i></div>
+        <div data-action="makeOrderedList" data-value="" class="item"><i class="fa fa-list"></i></div>
         <div data-action="image" data-value="" class="item">
             <i class="fa fa-picture-o"></i>
         </div>
+        <div data-action="increaseQuoteLevel" data-value="" class="item"><i class="fa fa-quote-right"></i></div>
     </div>
-    <div class="group">
-        <div data-action="link" data-value=""class="item"><i class="fa fa-link"></i></div>
-        <div data-action="quote" data-value="" class="item"><i class="fa fa-quote-right"></i></div>
-    </div>
+    
     <div class="group">
         <div data-action="undo" data-value="" class="item"><i class="fa fa-undo"></i></div>
         <div data-action="redo" data-value="" class="item"><i class="fa fa-undo flip"></i></div>
