--- a/ui/Squire-UI.html
+++ b/ui/Squire-UI.html
@@ -28,4 +28,16 @@
         <br>
         Font: <input type="text">
     </div>
+    <div id="drop-link">
+        <label>Insert Link</label>
+        <i class="fa fa-chevron-up quit"></i>
+        <input placeholder="Link URL" type="text" id="url" />
+        <div class="btn submitLink">Insert</div>
+    </div>
+    <div id="drop-image">
+        <label>Insert Image</label>
+        <i class="fa fa-chevron-up quit"></i>
+        <input placeholder="Image URL" type="text" id="imageUrl" />
+        <div class="btn sumbitImageURL">Insert</div>
+    </div>
 </div>
