--- a/Demo.html
+++ b/Demo.html
@@ -11,7 +11,7 @@
     <script src="build/Squire-UI.js" type="text/javascript"></script>
     <script>
     $(document).ready(function () {
-      UI = new SquireUI({replace: 'textarea#foo'});
+      UI = new SquireUI({replace: 'textarea#foo', height: 200});
     });
     </script>
 </head>
