Setting fonts now work

--- a/Demo.html
+++ b/Demo.html
@@ -7,7 +7,10 @@
     <!--[if IE 8]>
     <script type="text/javascript" src="build/ie8.js"></script>
     <![endif]-->
+
     <link href="build/Squire-UI.css" rel="stylesheet" type="text/css" />
+    <script src="build/jQuery/jQuery.js" type="text/javascript"></script>
+    <script src="build/squire-raw.js" type="text/javascript"></script>
     <script src="build/Squire-UI.js" type="text/javascript"></script>
     <script>
     $(document).ready(function () {
