--- a/Demo.html
+++ b/Demo.html
@@ -3,12 +3,13 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta charset="UTF-8">
-    <title>HTML Editor Test</title>
+    <title>Squire</title>
     <!--[if IE 8]>
     <script type="text/javascript" src="build/ie8.js"></script>
     <![endif]-->
 
     <link href="build/Squire-UI.css" rel="stylesheet" type="text/css" />
+    <link href="build/bootstrap.css" rel="stylesheet" type="text/css" />
     <script src="build/jQuery/jQuery.js" type="text/javascript"></script>
     <script src="build/squire-raw.js" type="text/javascript"></script>
     <script src="build/Squire-UI.js" type="text/javascript"></script>
@@ -20,7 +21,13 @@
 </head>
 <body>
 <h1>HTML Editor Test</h1>
+
+<header class="header">
+    <div class="wrapper">
+        <h1>Squire</h1>
+        <h2>The Rich Text Editor the internet needs.</h2>
+    </div>
+</header>
 <textarea id="foo"></textarea>
-<div id="editor"></div>
 </body>
 </html>
