added <> around textarea

--- a/Demo.html
+++ b/Demo.html
@@ -25,7 +25,7 @@
 <header class="header">
     <div class="wrapper">
         <h1>Squire</h1>
-        <h2>the textarea of the future</h2>
+        <h2>the <textarea> of the future</h2>
     </div>
 </header>
 
