Added Squire.md Gist to site

--- a/index.html
+++ b/index.html
@@ -73,10 +73,17 @@
 
     <div class="row">
         <div class="col-centered">
+            <script src="https://gist.github.com/matthewborden/4d0178fa4118ccc8f710.js"></script>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-centered">
             <hr>
             <p class="alignCenter">Made with <i class="fa fa-heart"></i> at <a href="https://www.fastmail.fm/">FastMail</a></p> 
         </div>
     </div>
+
 
     
 </div>
