Switched to a link, Embed of Gist takes too long to load

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <div class="row">
         <div class="col-centered">
-            <script src="https://gist.github.com/matthewborden/4d0178fa4118ccc8f710.js"></script>
+            <a class="alignCenter" href="https://github.com/neilj/Squire/blob/master/Readme.md"> Read More at Readme.md</a>
         </div>
     </div>
 
