--- a/index.html
+++ b/index.html
@@ -73,10 +73,17 @@
 
     <div class="row">
         <div class="col-centered">
+            <a class="alignCenter" href="https://github.com/neilj/Squire/blob/master/Readme.md"> Read More at Readme.md</a>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-centered">
             <hr>
             <p class="alignCenter">Made with <i class="fa fa-heart"></i> at <a href="https://www.fastmail.fm/">FastMail</a></p> 
         </div>
     </div>
+
 
     
 </div>
