Add list level manipulation actions to demo toolbar

--- a/Demo.html
+++ b/Demo.html
@@ -68,6 +68,8 @@
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <span id="makeUnorderedList">List</span>
     <span id="removeList">Unlist</span>
+    <span id="increaseListLevel">Increase list level</span>
+    <span id="decreaseListLevel">Decrease list level</span>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <span id="insertImage" class="prompt">Insert image</span>
   <span id="setHTML" class="prompt">Set HTML</span>
