--- a/Demo.html
+++ b/Demo.html
@@ -63,6 +63,10 @@
   <span id="makeLink" class="prompt">Link</span>
   </p>
   <p>
+    
+    <span id="makeCodeSnippet">Make Code Snippet</span>
+    <span id="removeCodeSnippet">Remove Code Snippet</span>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <span id="increaseQuoteLevel">Quote</span>
     <span id="decreaseQuoteLevel">Dequote</span>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
