--- a/Demo.html
+++ b/Demo.html
@@ -58,7 +58,7 @@
   <span id="setFontFace" class="prompt">Font face</span>
   </p>
   <p>
-  <span id="setTextColour" class="prompt">Text color</span>
+  <span id="setTextColor" class="prompt">Text colour</span>
   <span id="setHighlightColor" class="prompt">Text highlight</span>
   <span id="makeLink" class="prompt">Link</span>
   </p>
