--- a/Demo.html
+++ b/Demo.html
@@ -128,7 +128,15 @@
         return;
     }
     // Create Squire instance
-    editor = new Squire( doc );
+    editor = new Squire( doc, {
+        blockTag: 'p',
+        tagAttributes: {
+            block: {'class': 'paragraph'},
+            li: {'class': 'listItem'},
+            ul: {'class': 'UL'},
+            ol: {'class': 'OL'}
+        }
+    } );
     // Add styles to frame
     var style = doc.createElement( 'style' );
     style.type = 'text/css';
